# ccpilot

./: .gitignore  README.md  install.py  pyproject.toml
ccpilot/: __init__.py  __main__.py  classifier.py  config.py  config.sample.toml  guidance.py  learn.py  memory.py  registry.py  route.py  search.py
ccpilot-skills/accessibility-reviewer/: SKILL.md
ccpilot-skills/api-designer/: SKILL.md
ccpilot-skills/architecture-diagrammer/: SKILL.md
ccpilot-skills/changelog-generator/: SKILL.md
ccpilot-skills/ci-cd-builder/: SKILL.md
ccpilot-skills/code-review/: SKILL.md
ccpilot-skills/commit-message-writer/: SKILL.md
ccpilot-skills/config-linter/: SKILL.md
ccpilot-skills/dependency-auditor/: SKILL.md
ccpilot-skills/doc-generator/: SKILL.md
ccpilot-skills/dockerfile-optimizer/: SKILL.md
ccpilot-skills/env-doctor/: SKILL.md
ccpilot-skills/error-triage/: SKILL.md
ccpilot-skills/git-archaeologist/: SKILL.md
ccpilot-skills/i18n-extractor/: SKILL.md
ccpilot-skills/k8s-manifest-writer/: SKILL.md
ccpilot-skills/license-checker/: SKILL.md
ccpilot-skills/log-analyzer/: SKILL.md
ccpilot-skills/migration-writer/: SKILL.md
ccpilot-skills/perf-profiler/: SKILL.md
ccpilot-skills/pr-describer/: SKILL.md
ccpilot-skills/prompt-improver/: SKILL.md
ccpilot-skills/refactor-assistant/: SKILL.md
ccpilot/llm/: client.py
hooks/: ccpilot-post.cmd  ccpilot-post.sh  ccpilot.cmd  ccpilot.sh
scripts/: gen_skills.py
tests/: test_classifier.py  test_consensus.py  test_guidance.py  test_mailbox.py  test_memory.py  test_registry.py  test_route.py  test_search.py
(+12 files in other folders)
